# ExtractThinker

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  CustomException.py  Dockerfile  README.md  classification.ipynb  config.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml  splitting.ipynb  utils.py
.VSCodeCounter/2025-04-03_13-26-48/: details.md  diff-details.md  diff.md  diff.txt  results.csv  (+3 more)
Antropic/: AnthropicsApiRequest.py  AnthropicsApiResponse.py  AnthropicsApiService.py  ErrorDetail.py  Message.py
Classification/: Cascade.py  Eval.py  LogProbEval.py  Model4.py  ModelDecorator.py
core-concepts/: index.html
docTR/: Dockerfile  README.md  app.py
docs/: index.md
examples/: __init__.py  extractor_basic.py  receipt_processor.py  resume_processor.py
extract_thinker/: __init__.py  app.py  batch_client.py  batch_job.py  completion_handler.py  concatenation_handler.py  exceptions.py  extractor.py  featurelog.txt  global_models.py  image_splitter.py  llm.py  llm_engine.py  models.py  pagination_handler.py  process.py  splitter.py  text_splitter.py  utils.py  warning.py
getting-started/: index.html
medium_posts/: Payload.py  config.py  main.py  requirements.txt  utils.py
search/: search_index.json
stylesheets/: extra.css
tests/: classify.py  create_test_spreadsheet.py  document_loader_aws_textract.py  document_loader_azure_document_intelligence.py  document_loader_pypdf.py  document_loader_tesseract.py  extractor.py  notes.txt  ollama.py  test_batch_extractor.py  test_classify.py  test_cli.py  test_document_loader_aws_textract.py  test_document_loader_azure_document_intelligence.py  test_document_loader_base.py  test_document_loader_beautifulsoup.py  test_document_loader_data.py  test_document_loader_docling.py  test_document_loader_easyocr.py  test_document_loader_google_document_ai.py  test_document_loader_llm_image.py  test_document_loader_markitdown.py  test_document_loader_mistral_ocr.py  test_document_loader_pdfplumber.py  test_document_loader_pypdf.py  test_document_loader_spreadsheet.py  test_document_loader_tesseract.py  test_document_loader_txt.py  test_document_loader_word.py  test_evaluator.py  test_extractor.py  test_field_comparison.py  test_google_stack.py  test_hallucination_detector.py  test_llm_backends.py  test_markdown_converter.py  test_ollama.py  test_process.py  test_receipt_processor.py  test_teacher_student.py  (+1 more)
(+210 files in other folders)
