[tool.poetry]
name = "extract_thinker"
version = "0.1.2"
description = "Library to extract data from files and documents agnositicaly using LLMs"
authors = ["Júlio Almeida <enoch3712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pydantic = "^2.10.4"
litellm = "^1.57.0"
pillow = "^11.1.0"
pypdfium2 = "^4.29.0"
instructor = "^1.7.2"
python-dotenv = "^1.0.1"
cachetools = "^5.3.3"
pyyaml = "^6.0.1"
tiktoken = {version = "^0.8.0", python = ">=3.9,<3.13"}
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
